[gd_scene load_steps=28 format=3 uid="uid://1cwobjep8l64"]

[ext_resource type="Script" path="res://Scripts/land_melee_mob_proto.gd" id="1_p2jve"]
[ext_resource type="Texture2D" uid="uid://bv0sawcyi4tcg" path="res://Art/melee_mob_proto/Golem_Armor_AttackA.png" id="2_0k4ng"]
[ext_resource type="Texture2D" uid="uid://badu80h54sqrx" path="res://Art/melee_mob_proto/Golem_Armor_Run.png" id="3_wq05e"]
[ext_resource type="Texture2D" uid="uid://cork64626kixl" path="res://Art/melee_mob_proto/Golem_Armor_ArmorBreak.png" id="4_71syo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rhr58"]
atlas = ExtResource("2_0k4ng")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4l8w8"]
atlas = ExtResource("2_0k4ng")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpkef"]
atlas = ExtResource("2_0k4ng")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyw3r"]
atlas = ExtResource("2_0k4ng")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlymh"]
atlas = ExtResource("2_0k4ng")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eiqdf"]
atlas = ExtResource("2_0k4ng")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2crr"]
atlas = ExtResource("2_0k4ng")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_orem7"]
atlas = ExtResource("2_0k4ng")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ud7xr"]
atlas = ExtResource("2_0k4ng")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t10bx"]
atlas = ExtResource("2_0k4ng")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iev2o"]
atlas = ExtResource("2_0k4ng")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjlh4"]
atlas = ExtResource("4_71syo")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ap1n8"]
atlas = ExtResource("4_71syo")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3s5m6"]
atlas = ExtResource("4_71syo")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6c6w"]
atlas = ExtResource("4_71syo")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s38a6"]
atlas = ExtResource("4_71syo")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqr6g"]
atlas = ExtResource("3_wq05e")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0yau"]
atlas = ExtResource("3_wq05e")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xehig"]
atlas = ExtResource("3_wq05e")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tsl1"]
atlas = ExtResource("3_wq05e")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_k1716"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhr58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4l8w8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpkef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyw3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlymh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eiqdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2crr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_orem7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ud7xr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t10bx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iev2o")
}],
"loop": true,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjlh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ap1n8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3s5m6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6c6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s38a6")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqr6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0yau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xehig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tsl1")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qeupo"]
size = Vector2(46, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_li3ul"]
size = Vector2(45, 48)

[node name="land_melee_mob_proto" type="CharacterBody2D"]
script = ExtResource("1_p2jve")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -1)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_k1716")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_qeupo")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_li3ul")

[node name="RayCast_down_right" type="RayCast2D" parent="."]
position = Vector2(23, 0)
scale = Vector2(1.3, 1.3)

[node name="RayCast_down_left" type="RayCast2D" parent="."]
position = Vector2(-23, 0)
scale = Vector2(1.3, 1.3)

[node name="RayCast_left" type="RayCast2D" parent="."]
rotation = 1.5708
scale = Vector2(0.8, 0.8)

[node name="RayCast_right" type="RayCast2D" parent="."]
rotation = -1.5708
scale = Vector2(0.8, 0.8)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_entered"]
